# python-package-template

./: .gitignore  Makefile  README.md  setup.cfg
package_name/: __init__.py  package_name.py
package_name/config/: example.json
