[metadata]
name = <package_name>
version = 0.0.1

[options]
python_requires = >=3.9
packages = find:
install_requires =
    <3rd_party_package_names: like open3d>
include_package_data = True

[options.entry_points]
console_scripts =
    <package_name> = <package_name>:entry

[options.package_data]
<package_name> = config/example.json